working web generation integrated on loca api

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -31,6 +31,7 @@
     "confirmation_title": "Confirmation",
     "msg_image_saved": "Saved",
     "pre_process_warning": "If app crashes after touching the start button, you image may be to large to be processed in your device. Try again with a smaller image or try processing on web inestead of local",
+    "pre_process_warning2": "Your image is about to be processed online, please watch an ad in order to help me keep the server running.",
     "loading_dialog": "The app is working... this may take a while but it's ok as long as it doesn't crashes and closes.",
     "about": "About",
     "tip": "Tip",
