--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -46,5 +46,9 @@
     "posible_error1":"- The server has decided to die and I'll have to fix it, try again later.",
     "posible_error2":"- Your app may be outdated, I recomend updating to the latest version in order to process your image on the server.",
     "posible_error3":"- Mantainace or updates are being deployed on the server, try again later.",
-    "posible_error4":"- Keeping the server has become to expensive so I decided to stop the service and it may never return. I hope that this last one never happens, but in case it does you may still be able to process your images on your device."
+    "posible_error4":"- Keeping the server has become to expensive so I decided to stop the service and it may never return. I hope that this last one never happens, but in case it does you may still be able to process your images on your device.",
+
+    "server_image_error":"Error ocurred while processing your image.",
+    "large_errors":"Your image may be too big."
+    
 }
