--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -54,5 +54,10 @@
 
     "example":"Ejemplo",
     "img_in_ex":"Imágen de entrada",
-    "img_out_ex":"Imágen de salida"
+    "img_out_ex":"Imágen de salida",
+
+    "alloc_error":"Error en la asignación de tensores.",
+    "alloc_error_desc":"Las dimensiones de la imágen son muy grandes como para ser asignadas y procesadas en el dispositivo. Intenta procesar en web.",
+
+    "unknown_error":"Error desconocido."
 }
