--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -99,7 +99,7 @@
     "admin_sub": "Administrar subscripción",
 
     "help": "Ayuda",
-    "faq1": "Mensualmente puedes procesar y descargar hazta 15 imágenes. Si quisiera procesar más imágenes, tienes que actualizar tu cuenta atravez de la web app (inicia sesión y navega a subscripción), por 69.00MNX al mes podrás procesar imágenes ilimitadas y tendras acceso a los servicios de la web app."
+    "faq1": "Mensualmente puedes procesar y descargar hazta 15 imágenes. Si quisiera procesar más imágenes, tienes que actualizar tu cuenta atravez de la web app (inicia sesión y navega a subscripción), por 69.00MNX al mes podrás procesar imágenes ilimitadas sin anuncios, también tendras acceso a los servicios de la web app."
 
 
 }
