--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -100,5 +100,5 @@
     "admin_sub": "Manage subscription",
 
     "help": "Help",
-    "faq1": "You can downoad and process up to 15 images per moth for free. If you would like to be able to process more images, you have to upgrade your account trough the web app (login in the web app and navigate to subscription), for 69.00MNX (3.44USD) per month you can process and download unlimited images, you also gain acces to other services within the web app."
+    "faq1": "You can downoad and process up to 15 images per moth for free. If you would like to be able to process more images, you have to upgrade your account trough the web app (login in the web app and navigate to subscription), for 69.00MNX (3.44USD) per month you can process and download unlimited images without ads, and you also gain acces to other services within the web app."
 }
