--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -94,13 +94,15 @@
     "log_out": "Cerrar sesión",
 
     "limit_reached": "Haz alcanzado tu limite mensual de procesamiento/descarga de imágenes",
-    "upgrade_pls": "Actualiza tu cuenta para poder seguir procesando y descargando imágenes ilimitadamente. Puedes actualizar tu subscripción desde la web app.",
+    "upgrade_pls": "Compra créditos para seguir procesando imágenes.",
     "return": "Regresar",
-    "admin_sub": "Administrar subscripción",
+    "admin_sub": "Comprar CR",
 
     "help": "Ayuda",
-    "faq1": "Mensualmente puedes procesar y descargar hazta 15 imágenes. Si quisiera procesar más imágenes, tienes que actualizar tu cuenta atravez de la web app (inicia sesión y navega a subscripción), por 69.00MNX al mes podrás procesar imágenes ilimitadas sin anuncios, también tendras acceso a los servicios de la web app.",
-    "next": "Siguiente"
+    "faq1": "Mensualmente puedes procesar y descargar hasta 10 imágenes. Si quisieras procesar más imágenes, tienes que comprar créditos (CR) atravez de la web app (inicia sesión y navega a subscripción), un credito te permite procesar y descargar 1 imagen (puedes procesar varias veces, pero el CR se usa cuando descargas la imagen), también podrás usar tu CR en otros servicios de la web app.",
+    "next": "Siguiente",
+    "free_images_downloaded": "Imágenes gratis descargadas este mes:",
 
+    "sell_text":"El CR te permite procesar y descargar imágenes una vez alcances el límite mensual. Mientras tengas CR, no verás anuncios. Compra CR mediante la Web App (app.exusai.com)"
 
 }
