--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -100,7 +100,7 @@
     "admin_sub": "Buy CR",
 
     "help": "Help",
-    "faq1": "You can downoad and process up to 10 images per month for free. If you would like to be able to process more images, you have to buy credits (CR) trough the web app (login in the web app and navigate to Credits), one credit will allow you to proces and download 1 image (you can process many times but the credit is used when you download the image), and you can also use your CR for other services within the web app.",
+    "faq1": "You can downoad and process up to 10 images per month for free. If you would like to be able to process more images, buy credits (CR), one credit will allow you to proces and download 1 image (you can process many times but the credit is used when you download the image), and you can also use your CR for other services within the web app.",
     "next": "Next",
     "free_images_downloaded": "Free images downloaded this month:",
 
