--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -99,7 +99,7 @@
     "admin_sub": "Comprar CR",
 
     "help": "Ayuda",
-    "faq1": "Mensualmente puedes procesar y descargar hasta 10 imágenes. Si quisieras procesar más imágenes, tienes que comprar créditos (CR) atravez de la web app (inicia sesión y navega a subscripción), un credito te permite procesar y descargar 1 imagen (puedes procesar varias veces, pero el CR se usa cuando descargas la imagen), también podrás usar tu CR en otros servicios de la web app.",
+    "faq1": "Mensualmente puedes procesar y descargar hasta 10 imágenes. Si quisieras procesar más imágenes, compra créditos (CR), un credito te permite procesar y descargar 1 imagen (puedes procesar varias veces, pero el CR se usa cuando descargas la imagen), también podrás usar tu CR en otros servicios de la web app.",
     "next": "Siguiente",
     "free_images_downloaded": "Imágenes gratis descargadas este mes:",
 
